Changed block of Roman Fedoirv

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Roman Fedoriv start block-->
+    <!--Roman Fedoriv end block-->
     
 </body>
 </html>
