Added block-comment of  Ruslan

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   <!-- Sofiia block start--> 
+    <!-- Sofiia block start--> 
     <!-- Sofiia block end--> 
+
+    <!--Ruslan block start-->
+    <!--Ruslan block end-->
 </body>
 </html>
