--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     
     <!--Roman Fedoriv start block-->
     <!--Roman Fedoriv end block-->  
+    
+    <!--Lana start block-->
+    <!--lana start end-->
 </body>
 </html>
