--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <!--Roman Fedoriv end block-->  
     
     <!--Lana start block-->
-    <!--lana start end-->
+    <!--Lana start end-->
 </body>
 </html>
