--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <footer>
         <!--Tanya block start-->
-        <!--Tanya block end-->
+        <!--Tanya block end!-->
     </footer>
 
     <!--Lana start block-->
