Added 2nd part (header)

--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jolly Fashion House</title>
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
 </head>
 
 <body>
     <!--Roman Hrytsyshyn start-->
+    <header class="header">
+        <div class="header__entry-block">
+            <h1 class="header__introduction">DESIGNER CLOTHES</h1>
+            <p class="header__slogan">
+                <font color="#c2a18a">—</font> Your New Everyday Style.
+            </p>
+            <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes for
+                any occasion.</p>
+            <a href="#" class="header__shop-now-link"><button class="header__shop-now-button">
+                    <p class="header__shop-now-text">Shop Now +</p>
+                </button></a>
+            <a href="#" class="header__about-us-link"><button class="header__about-us-button">
+                    <p class="header__about-us-text">About Us</p>
+                </button></a>
+        </div>
+    </header>
     <!--Roman Hrytsyshyn end-->
 
     <!-- Sofiia block start-->
