--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--Roman Hrytsyshyn start-->
     <header class="header">
-        <div class="header__entry-block">
+        <div  style="background-image: url(img/background-logo.png); height: 700px;" class="header__entry-block">
             <h1 class="header__introduction">DESIGNER CLOTHES</h1>
             <p class="header__slogan">
                 <font color="#c2a18a">—</font> Your New Everyday Style.
