Added header top row

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 <body>
     <!--Roman Hrytsyshyn start-->
     <header class="header">
+        <!-- Sofiia block start-->
+        <div class="header__top-row">
+            <div class="header__top-row-logo">
+                <img width="200" src="img/logo.svg" alt="Fashion House Logo">
+            </div>
+            <nav class="header__nav">
+                <a href="#">About Us</a>
+                <a href="#">Catalog</a>
+                <a href="#">Collection</a>
+                <a href="#">Contact us</a>
+            </nav>
+        </div>
+    <!-- Sofiia block end-->
         <div class="header__entry-block">
             <h1 class="header__introduction">DESIGNER CLOTHES</h1>
             <p class="header__slogan">
@@ -28,9 +41,6 @@
         </div>
     </header>
     <!--Roman Hrytsyshyn end-->
-
-    <!-- Sofiia block start-->
-    <!-- Sofiia block end-->
 
     <!--Ruslan block start-->
     <!--Ruslan block end-->
