Added section 3 and all elements inside it

--- a/index.html
+++ b/index.html
@@ -18,8 +18,45 @@
     <!--Ruslan block start-->
     <!--Ruslan block end-->
 
-    <!--Roman Fedoriv start block-->
-    <!--Roman Fedoriv end block-->
+    <!--Roman Fedoriv start block 3-->
+    <section class="section3">
+        <div class="section3__img1">
+            <img src="img/section 3/women_1.png" alt="women-1" class="section3__img1-women1">
+        </div>
+        <div class="section3__quotationMarks">
+            <img src="img/section 3/quotation-mark.png" alt="uatation-mark" class="section3__img1-quatationMark">
+        </div>
+        <div class="section3__johannasPhrase">
+            <p class="section3__johannasPhrase-text">"I have always had difficulties with buying clothes for every-day
+                wear. Therefore, together with Linda, we decided to create our own brand. </p>
+        </div>
+        <div class="section3__johanna">
+            <p class="section3__johanna-author"> <span class="section3__johanna-author-dash">—</span> Johanna Innsbruck
+            </p>
+        </div>
+        <div class="section3__sectionName">
+            <h2 class="secion__sectionName-about">ABOUT US</h2>
+        </div>
+        <div class="section3__articleName">
+            <h3 class="section3__articleName-name"><span class="section3__articleName-name-dash"> — </span>Comfort and
+                Quality Come First.</h3>
+        </div>
+        <div class="section3__article">
+            <p class="section3__article-text"><span class="section3__article-text-text1">Johanna Innsbruck and Linda
+                    Copperfield have always dreamed of comfortable women's clothing that would look appropriate in any
+                    circumstances.</span><br>
+                <br>
+                <span class="section3__article-text-text2"></span>This is how the Jolly House brand appeared – it is a
+                brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
+                fabrics and pay great attention to details that make the difference.</span>
+            </p>
+        </div>
+        <div class="section3__img2">
+            <img src="img/section 3/women_2.png" alt="women-2" class="section3__img2-women2">
+        </div>
+
+    </section>
+    <!--Roman Fedoriv end block 3-->
 
     <footer>
         <!--Tanya block start-->
