Changed link on About us in Sofiias block

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img width="200" src="img/logo.svg" alt="Fashion House Logo">
                 </div>
                 <nav class="header__nav">
-                    <a href="#">About Us</a>
+                    <a href="#about_us">About Us</a>
                     <a href="#">Catalog</a>
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
@@ -51,7 +51,7 @@
             <img src="img/section 3/women_1.png" alt="women-1" class="section3__img1-women1">
         </div>
         <div class="section3__quotationMarks">
-            <img src="img/section 3/quotation-mark.png" alt="uatation-mark" class="section3__img1-quatationMark">
+            <img src="img/section 3/quotation-mark.png" alt="quatation-mark" class="section3__img1-quatationMark">
         </div>
         <div class="section3__johannasPhrase">
             <p class="section3__johannasPhrase-text">"I have always had difficulties with buying clothes for every-day
@@ -62,7 +62,7 @@
             </p>
         </div>
         <div class="section3__sectionName">
-            <h2 class="secion__sectionName-about">ABOUT US</h2>
+            <h2 class="secion__sectionName-about" id="about_us">ABOUT US</h2>
         </div>
         <div class="section3__articleName">
             <h3 class="section3__articleName-name"><span class="section3__articleName-name-dash"> — </span>Comfort and
