minor changes in section3:img urls was changed

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
        <!--Roman Fedoriv start block 3-->
     <section class="section3">
         <div class="section3__img1">
-            <img src="img/section 3/women_1.png" alt="women-1" class="section3__img1-women1">
+            <img src="img/section_3/women_1.png" alt="women-1" class="section3__img1-women1">
         </div>
         <div class="section3__quotationMarks">
-            <img src="img/section 3/quotation-mark.png" alt="quatation-mark" class="section3__img1-quatationMark">
+            <img src="img/section_3/quotation-mark.png" alt="quatation-mark" class="section3__img1-quatationMark">
         </div>
         <div class="section3__johannasPhrase">
             <p class="section3__johannasPhrase-text">"I have always had difficulties with buying clothes for every-day
@@ -79,7 +79,7 @@
             </p>
         </div>
         <div class="section3__img2">
-            <img src="img/section 3/women_2.png" alt="women-2" class="section3__img2-women2">
+            <img src="img/section_3/women_2.png" alt="women-2" class="section3__img2-women2">
         </div>
 
     </section>
