some renames of classes

--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
         </div>
         <!--Roman Hrytsyshyn end-->
     </header>
-       <!--Roman Fedoriv start block 3-->
-    <section class="section3">
-        <div class="section3__img1">
-            <img src="img/section_3/women_1.png" alt="women-1" class="section3__img1-women1">
+    <!--Roman Fedoriv start block 3-->
+    <div class="block-3">
+        <div class="block-3__img-column-1">
+            <img src="img/block_3/women-column-1.png" alt="women-column-1" class="block-3__img-column-1-img">
         </div>
-        <div class="section3__quotationMarks">
-            <img src="img/section_3/quotation-mark.png" alt="quatation-mark" class="section3__img1-quatationMark">
+        <div class="block-3__quotation-marks">
+            <img src="img/block_3/quotation-mark.png" alt="quatation-marks" class="block-3__quatation-marks-img">
         </div>
-        <div class="section3__johannasPhrase">
-            <p class="section3__johannasPhrase-text">"I have always had difficulties with buying clothes for every-day
+        <div class="block-3__johannas-phrase">
+            <p class="block-3__johannas-phrase-text">"I have always had difficulties with buying clothes for every-day
                 wear. Therefore, together with Linda, we decided to create our own brand. </p>
         </div>
         <div class="section3__johanna">
-            <p class="section3__johanna-author"> <span class="section3__johanna-author-dash">—</span> Johanna Innsbruck
+            <p class="block-3__johanna-author"> <span class="block-3__johanna-author-dash">—</span> Johanna Innsbruck
             </p>
         </div>
-        <div class="section3__sectionName">
-            <h2 class="secion__sectionName-about" id="about_us">ABOUT US</h2>
+        <div class="block-3__section-name">
+            <h2 class="secion__section-name-about" id="about_us">ABOUT US</h2>
         </div>
-        <div class="section3__articleName">
-            <h3 class="section3__articleName-name"><span class="section3__articleName-name-dash"> — </span>Comfort and
+        <div class="block-3__article-name">
+            <h3 class="block-3__article-name-name"><span class="block-3__article-name-name-dash"> — </span>Comfort and
                 Quality Come First.</h3>
         </div>
-        <div class="section3__article">
-            <p class="section3__article-text"><span class="section3__article-text-text1">Johanna Innsbruck and Linda
+        <div class="block-3__article">
+            <p class="block-3__article-text"><span class="section3__article-text-text-1">Johanna Innsbruck and Linda
                     Copperfield have always dreamed of comfortable women's clothing that would look appropriate in any
                     circumstances.</span><br>
                 <br>
-                <span class="section3__article-text-text2"></span>This is how the Jolly House brand appeared – it is a
+                <span class="block-3__article-text-text-2"></span>This is how the Jolly House brand appeared – it is a
                 brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
                 fabrics and pay great attention to details that make the difference.</span>
             </p>
         </div>
-        <div class="section3__img2">
-            <img src="img/section_3/women_2.png" alt="women-2" class="section3__img2-women2">
+        <div class="block-3__img-column-2"">
+            <img src=" img/block_3/women-column-2.png" alt="women-column-2" class="block-3__img-column-2-img">
         </div>
 
-    </section>
+    </div>
     <!--Roman Fedoriv end block 3-->
 
     <!--Ruslan block start-->
