fixed some errors

--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                     Copperfield have always dreamed of comfortable women's clothing that would look appropriate in any
                     circumstances.</span><br>
                 <br>
-                <span class="block-3__article-text-text-2"></span>This is how the Jolly House brand appeared – it is a
+                <span class="block-3__article-text-text-2">This is how the Jolly House brand appeared – it is a
                 brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
-                fabrics and pay great attention to details that make the difference.</span>
+                fabrics and pay great attention to details that make the difference.
+                </span>
             </p>
         </div>
-        <div class="block-3__img-column-2"">
+        <div class="block-3__img-column-2">
             <img src=" img/block_3/women-column-2.png" alt="women-column-2" class="block-3__img-column-2-img">
         </div>
 
