--- a/index.html
+++ b/index.html
@@ -45,8 +45,27 @@
         </div>
         <!--Roman Hrytsyshyn end-->
     </header>
-
-
+    <main>
+    <!--Svitlana Stasiuk block start-->
+        <section class="about-us">   
+            <div class="about-us__text">
+                <h2 id="" class="about-us__text__name">WHY CHOOSE US</h2>
+                <p class="about-us__text__slogan">
+                    <span class="about-us__text__slogan__dash" style="color: #000;">—</span>
+                    <span class="about-us__text__slogan__text" style="color: #000";>Things You'll Love About Jolly House.</span>
+                </p>
+                <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
+                <ul class="about-us__text__slogan"> <span class="about-us__text__slogan__dash">—</span>
+                    <span class="about-us__text__slogan__text">Jolly brand is:</span>
+                    <li class="about-us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
+                    <li class="about-us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
+                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.</li>                </ul>
+                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear. Therefore, we develop capsule collections where clothes go well with each other. You can mix them as well to create stunning new looks! </p>
+                <a href="#" class="about-us__lean-more-link">Learn More +</a>
+            </div>
+        </section>
+    <!--Svitlana Stasiuk block end-->
+    </main>
     <!--Ruslan block start-->
     <!--Ruslan block end-->
 
@@ -58,8 +77,7 @@
         <!--Tanya block end!-->
     </footer>
 
-    <!--Lana start block-->
-    <!--Lana end block-->
+
 </body>
 
 </html>
