added main- block about accessories

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jolly Fashion House</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 
 <body>
@@ -89,9 +90,45 @@
     <!--Ruslan block start-->
     <!--Ruslan block end-->
 
+<!--block start Tanya-->
+
+<div class="main-block">
+    <span class="main-block__title">Accessories</span>
+    <div class="main-block__spacer-line"></div>
+    <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
+    <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
+    <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful and
+        sophisticated accessories that
+        highlight your natural beauty.</p>
+    <div class="main-block__bags">
+        <i class="fas fa-shopping-bag"></i>
+        <p class="main-block__bags">Leather bags</p>
+        <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in our
+            online
+            and offline stores.</p>
+    </div>
+    <div class="main-block__hats">
+        <i class="fab fa-redhat"></i>
+        <p class="main-block__things">Hats and Caps</p>
+        <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current occasion
+            and
+            your style.</p>
+    </div>
+    <div class="main-block__gloves">
+        <i class="fas fa-mitten"></i>
+        <p class="main-block__stuff">Gloves and Scarves</p>
+        <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these accessories, as
+            well as for silk and woven
+            scarves in our store!</p>
+    </div>
+    <div class="main-block__icon">
+        <img src="img/girl-with-rose.jpeg" alt="girl with rose">
+    </div>
+</div>
+
+ <!--block end Tanya-->
+
     <footer>
-        <!--Tanya block start-->
-        <!--Tanya block end!-->
     </footer>
 
     <!--Lana start block-->
