--- a/index.html
+++ b/index.html
@@ -46,70 +46,82 @@
         <!--Roman Hrytsyshyn end-->
     </header>
     <main>
-    <!--Svitlana Stasiuk block start-->
-        <section class="about-us">   
+        <!--Roman Fedoriv start block 3-->
+        <div class="block-3">
+            <div class="block-3__img-column-1">
+                <img src="img/block_3/women-column-1.png" alt="women-column-1" class="block-3__img-column-1-img">
+            </div>
+            <div class="block-3__quotation-marks">
+                <img src="img/block_3/quotation-mark.png" alt="quatation-marks" class="block-3__quatation-marks-img">
+            </div>
+            <div class="block-3__johannas-phrase">
+                <p class="block-3__johannas-phrase-text">"I have always had difficulties with buying clothes for
+                    every-day
+                    wear. Therefore, together with Linda, we decided to create our own brand. </p>
+            </div>
+            <div class="section3__johanna">
+                <p class="block-3__johanna-author"> <span class="block-3__johanna-author-dash">—</span> Johanna
+                    Innsbruck
+                </p>
+            </div>
+            <div class="block-3__section-name">
+                <h2 class="secion__section-name-about" id="about_us">ABOUT US</h2>
+            </div>
+            <div class="block-3__article-name">
+                <h3 class="block-3__article-name-name"><span class="block-3__article-name-name-dash"> — </span>Comfort
+                    and
+                    Quality Come First.</h3>
+            </div>
+            <div class="block-3__article">
+                <p class="block-3__article-text"><span class="section3__article-text-text-1">Johanna Innsbruck and Linda
+                        Copperfield have always dreamed of comfortable women's clothing that would look appropriate in
+                        any
+                        circumstances.</span><br>
+                    <br>
+                    <span class="block-3__article-text-text-2">This is how the Jolly House brand appeared – it is a
+                        brand for women who like to feel confident, seductive, and stylish in any situation. We use only
+                        natural
+                        fabrics and pay great attention to details that make the difference.
+                    </span>
+                </p>
+            </div>
+            <div class="block-3__img-column-2">
+                <img src=" img/block_3/women-column-2.png" alt="women-column-2" class="block-3__img-column-2-img">
+            </div>
+
+        </div>
+        <!--Roman Fedoriv end block 3-->
+
+        <!--Svitlana Stasiuk block start-->
+        <section class="about-us">
             <div class="about-us__text">
-                <h2 id="" class="about-us__text__name">WHY CHOOSE US</h2>
+                <h2 id="why choose us" class="about-us__text__name">WHY CHOOSE US</h2>
                 <p class="about-us__text__slogan">
                     <span class="about-us__text__slogan__dash" style="color: #000;">—</span>
-                    <span class="about-us__text__slogan__text" style="color: #000";>Things You'll Love About Jolly House.</span>
+                    <span class="about-us__text__slogan__text" style="color: #000" ;>Things You'll Love About Jolly
+                        House.</span>
                 </p>
                 <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
                 <ul class="about-us__text__slogan"> <span class="about-us__text__slogan__dash">—</span>
                     <span class="about-us__text__slogan__text">Jolly brand is:</span>
                     <li class="about-us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
                     <li class="about-us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
-                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.</li>                </ul>
-                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear. Therefore, we develop capsule collections where clothes go well with each other. You can mix them as well to create stunning new looks! </p>
+                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.
+                    </li>
+                </ul>
+                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
+                    Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
+                    well to create stunning new looks! </p>
                 <a href="#" class="about-us__lean-more-link">Learn More +</a>
             </div>
         </section>
-    <!--Svitlana Stasiuk block end-->
+        <!--Svitlana Stasiuk block end-->
+
+
+
+        <!--Ruslan block start-->
+        <!--Ruslan block end-->
     </main>
-    <!--Roman Fedoriv start block 3-->
-    <div class="block-3">
-        <div class="block-3__img-column-1">
-            <img src="img/block_3/women-column-1.png" alt="women-column-1" class="block-3__img-column-1-img">
-        </div>
-        <div class="block-3__quotation-marks">
-            <img src="img/block_3/quotation-mark.png" alt="quatation-marks" class="block-3__quatation-marks-img">
-        </div>
-        <div class="block-3__johannas-phrase">
-            <p class="block-3__johannas-phrase-text">"I have always had difficulties with buying clothes for every-day
-                wear. Therefore, together with Linda, we decided to create our own brand. </p>
-        </div>
-        <div class="section3__johanna">
-            <p class="block-3__johanna-author"> <span class="block-3__johanna-author-dash">—</span> Johanna Innsbruck
-            </p>
-        </div>
-        <div class="block-3__section-name">
-            <h2 class="secion__section-name-about" id="about_us">ABOUT US</h2>
-        </div>
-        <div class="block-3__article-name">
-            <h3 class="block-3__article-name-name"><span class="block-3__article-name-name-dash"> — </span>Comfort and
-                Quality Come First.</h3>
-        </div>
-        <div class="block-3__article">
-            <p class="block-3__article-text"><span class="section3__article-text-text-1">Johanna Innsbruck and Linda
-                    Copperfield have always dreamed of comfortable women's clothing that would look appropriate in any
-                    circumstances.</span><br>
-                <br>
-                <span class="block-3__article-text-text-2">This is how the Jolly House brand appeared – it is a
-                brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
-                fabrics and pay great attention to details that make the difference.
-                </span>
-            </p>
-        </div>
-        <div class="block-3__img-column-2">
-            <img src=" img/block_3/women-column-2.png" alt="women-column-2" class="block-3__img-column-2-img">
-        </div>
-
-    </div>
-    <!--Roman Fedoriv end block 3-->
-
-    <!--Ruslan block start-->
-    <!--Ruslan block end-->
-
     <footer>
         <!--Tanya block start-->
         <!--Tanya block end!-->
