renamed div class main-block to section main-block

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     
 <!--block start Tanya-->
 
-<div class="main-block">
+<section class="main-block">
     <span class="main-block__title">Accessories</span>
     <div class="main-block__spacer-line"></div>
     <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
@@ -157,7 +157,7 @@
     <div class="main-block__icon">
         <img src="img/girl-with-rose.jpeg" alt="girl with rose">
     </div>
-</div>
+</section>
 
  <!--block end Tanya-->
 </main>
