Added section history

--- a/index.html
+++ b/index.html
@@ -47,25 +47,30 @@
         <!--Roman Hrytsyshyn end-->
     </header>
     <main>
-    <!--Svitlana Stasiuk block start-->
-        <section class="about-us">   
+        <!--Svitlana Stasiuk block start-->
+        <section class="about-us">
             <div class="about-us__text">
                 <h2 id="" class="about-us__text__name">WHY CHOOSE US</h2>
                 <p class="about-us__text__slogan">
                     <span class="about-us__text__slogan__dash" style="color: #000;">—</span>
-                    <span class="about-us__text__slogan__text" style="color: #000";>Things You'll Love About Jolly House.</span>
+                    <span class="about-us__text__slogan__text" style="color: #000" ;>Things You'll Love About Jolly
+                        House.</span>
                 </p>
                 <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
                 <ul class="about-us__text__slogan"> <span class="about-us__text__slogan__dash">—</span>
                     <span class="about-us__text__slogan__text">Jolly brand is:</span>
                     <li class="about-us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
                     <li class="about-us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
-                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.</li>                </ul>
-                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear. Therefore, we develop capsule collections where clothes go well with each other. You can mix them as well to create stunning new looks! </p>
+                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.
+                    </li>
+                </ul>
+                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
+                    Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
+                    well to create stunning new looks! </p>
                 <a href="#" class="about-us__lean-more-link">Learn More +</a>
             </div>
         </section>
-    <!--Svitlana Stasiuk block end-->
+        <!--Svitlana Stasiuk block end-->
     </main>
     <!--Roman Fedoriv start block 3-->
     <div class="block-3">
@@ -96,8 +101,9 @@
                     circumstances.</span><br>
                 <br>
                 <span class="block-3__article-text-text-2">This is how the Jolly House brand appeared – it is a
-                brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
-                fabrics and pay great attention to details that make the difference.
+                    brand for women who like to feel confident, seductive, and stylish in any situation. We use only
+                    natural
+                    fabrics and pay great attention to details that make the difference.
                 </span>
             </p>
         </div>
@@ -111,43 +117,96 @@
     <!--Ruslan block start-->
     <!--Ruslan block end-->
 
-<!--block start Tanya-->
+    <!--block start Tanya-->
 
-<div class="main-block">
-    <span class="main-block__title">Accessories</span>
-    <div class="main-block__spacer-line"></div>
-    <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
-    <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
-    <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful and
-        sophisticated accessories that
-        highlight your natural beauty.</p>
-    <div class="main-block__bags">
-        <i class="fas fa-shopping-bag"></i>
-        <p class="main-block__bags">Leather bags</p>
-        <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in our
-            online
-            and offline stores.</p>
+    <div class="main-block">
+        <span class="main-block__title">Accessories</span>
+        <div class="main-block__spacer-line"></div>
+        <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
+        <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
+        <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful and
+            sophisticated accessories that
+            highlight your natural beauty.</p>
+        <div class="main-block__bags">
+            <i class="fas fa-shopping-bag"></i>
+            <p class="main-block__bags">Leather bags</p>
+            <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in our
+                online
+                and offline stores.</p>
+        </div>
+        <div class="main-block__hats">
+            <i class="fab fa-redhat"></i>
+            <p class="main-block__things">Hats and Caps</p>
+            <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current
+                occasion
+                and
+                your style.</p>
+        </div>
+        <div class="main-block__gloves">
+            <i class="fas fa-mitten"></i>
+            <p class="main-block__stuff">Gloves and Scarves</p>
+            <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these
+                accessories, as
+                well as for silk and woven
+                scarves in our store!</p>
+        </div>
+        <div class="main-block__icon">
+            <img src="img/girl-with-rose.jpeg" alt="girl with rose">
+        </div>
     </div>
-    <div class="main-block__hats">
-        <i class="fab fa-redhat"></i>
-        <p class="main-block__things">Hats and Caps</p>
-        <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current occasion
-            and
-            your style.</p>
-    </div>
-    <div class="main-block__gloves">
-        <i class="fas fa-mitten"></i>
-        <p class="main-block__stuff">Gloves and Scarves</p>
-        <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these accessories, as
-            well as for silk and woven
-            scarves in our store!</p>
-    </div>
-    <div class="main-block__icon">
-        <img src="img/girl-with-rose.jpeg" alt="girl with rose">
-    </div>
-</div>
 
- <!--block end Tanya-->
+    <!--block end Tanya-->
+
+    <!-- Sofiia block start-->
+    <div class="history">
+        <div class="history__header">
+            <p class="history__header-top-row">HISTORY</p>
+            <p class="history_header-title"><span>-</span>Moments That Matters for Us.</p>
+            <p class="history_header-text">A few words about how our brand of designer clothes was created and
+                developed.</p>
+        </div>
+        <div class="Beginning">
+            <div class="beginning__img">
+                <img src="img/history-block/1997.svg" alt="1997" width="200">
+            </div>
+            <div class="beginning__text">
+                <p class="beginning__text-title">
+                    Beginning
+                </p>
+                <span class="beginning__text-hr">-</span>
+                <p class="beginnind__text-paragraph">Johanna met Linda, and together they decided to create a fashion
+                    brand.</p>
+            </div>
+        </div>
+
+        <div class="featured">
+            <div class="featured__img">
+                <img src="img/history-block/2001.svg" alt="2001" width="200">
+            </div>
+            <div class="featured__text">
+                <p class="featured__text-title">
+                    Featured in Vogue
+                </p>
+                <span class="featured__text-hr">-</span>
+                <p class="featured__text-paragraph">We were featured as the "Editor's Pick for Spring-Summer 2001".</p>
+            </div>
+        </div>
+
+        <div class="first-offline-store">
+            <div class="first-offline-store__img">
+                <img src="img/history-block/2019.svg" alt="2019" width="200">
+            </div>
+            <div class="first-offline-store__text">
+                <p class="first-offline-store__text-title">
+                    First Offline Store
+                </p>
+                <span class="first-offline-store__text-hr">-</span>
+                <p class="first-offline-store__text-paragraph">In 2019, we opened our first boutique on the 5th Ave in
+                    New York.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Sofiia block end-->
 
     <footer>
     </footer>
