Changed imagine to a smaller

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!--block start Tanya-->
 
-    <div class="main-block">
+    <section class="main-block">
         <span class="main-block__title">Accessories</span>
         <div class="main-block__spacer-line"></div>
         <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
@@ -157,9 +157,9 @@
                 scarves in our store!</p>
         </div>
         <div class="main-block__icon">
-            <img src="img/girl-with-rose.jpeg" alt="girl with rose">
+            <img src="img/girl-rose.jpeg" alt="girl with rose">
         </div>
-    </div>
+    </section>
 
     <!--block end Tanya-->
 
