Created skeleton of Ruslan's block

--- a/index.html
+++ b/index.html
@@ -215,6 +215,30 @@
     <!-- Sofiia block end-->
 
     <!--Ruslan block start-->
+    <div>
+        <h1>CATALOG</h1>
+        <p>---</p>
+        <p>Designer Clothes for Every Taste.</p>
+        <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.</p>
+        <ul>
+            <li><img>
+                <p></p>
+                <p></p>
+            </li>
+            <li><img>
+                <p></p>
+                <p></p>
+            </li>
+            <li><img>
+                <p></p>
+                <p></p>
+            </li>
+            <li><img>
+                <p></p>
+                <p></p>
+            </li>
+        </ul>
+    </div>
     <!--Ruslan block end-->
 
 
