Added class=main for <main>

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <!--Roman Hrytsyshyn end-->
     </header>
-    <main>
+    <main class="main">
         <!--Roman Fedoriv start block 3-->
         <div class="block-3">
             <div class="block-3__img-column-1">
